--- a/classes/system/linux/system/single.yml
+++ b/classes/system/linux/system/single.yml
@@ -2,8 +2,8 @@ classes:
 - service.linux.system
 - service.ntp.client
 - service.salt.minion.master
-- system.collectd.client.carbon
-- system.sensu.client.single
+#- system.collectd.client.carbon
+#- system.sensu.client.single
 - system.openssh.server.single
 parameters:
   linux:
