Config for owncloud

--- a/classes/system/reclass/storage/system/fpy_eru.yml
+++ b/classes/system/reclass/storage/system/fpy_eru.yml
@@ -143,12 +143,31 @@ parameters:
           domain: lxc.eru
           classes:
             - system.linux.system.single
+            - service.memcached.server.local
+            - service.apache.server.single
             - service.mysql.server.single
+            - service.owncloud.server
           params:
             salt_master_host: ${_param:reclass_config_master}
             mysql_admin_user: root
             mysql_admin_password: cloudlab
           parameters:
+            owncloud:
+              server:
+                # pwgen -A 12 | head -1
+                instanceid: iy5opia6chae
+                # pwgen 31 | head -1
+                passwordsalt: Een7riefohSahchaigh9ohcho6xoaFe
+                # pwgen -y 49 | head -1
+                secret: |
+                  "guth9kee1fe9hoo\g6oowei6er9aigohK=ieM4uvojaicha4a"
+                url: "http://owncloud.lxc.eru"
+                database:
+                  password: eikaithiuka2iex1ChieYaGeiguqu0iw
+                cache:
+                  enabled: true
+                  servers:
+                    - address: localhost
             mysql:
               server:
                 ssl:
@@ -162,3 +181,12 @@ parameters:
                       password: eikaithiuka2iex1ChieYaGeiguqu0iw
                       host: 127.0.0.1
                       rights: all privileges
+            apache:
+              server:
+                site:
+                  owncloud:
+                    enabled: true
+                    type: owncloud
+                    name: owncloud
+                    host:
+                      name: owncloud.lxc.eru
