Missing owncloud params

--- a/classes/system/reclass/storage/system/fpy_eru.yml
+++ b/classes/system/reclass/storage/system/fpy_eru.yml
@@ -170,6 +170,10 @@ parameters:
                     - address: localhost
             mysql:
               server:
+                trusted_domains:
+                  - owncloud.lxc.eru
+                mail:
+                  domain: lxc.eru
                 ssl:
                   enabled: false
                 database:
