Enable appstore experimental apps

--- a/classes/system/reclass/storage/system/fpy_eru.yml
+++ b/classes/system/reclass/storage/system/fpy_eru.yml
@@ -175,6 +175,8 @@ parameters:
                 admin:
                   username: admin
                   password: cloudlab
+                appstore:
+                  experimental: true
             mysql:
               server:
                 ssl:
