No separate instance of dovecot

--- a/classes/system/postfix/server/cluster.yml
+++ b/classes/system/postfix/server/cluster.yml
@@ -12,7 +12,7 @@ parameters:
       service:
         director:
           enabled: true
-          separate_instance: true
+          separate_instance: false
           backends:
             - mail01.lxc.eru
             - mail02.lxc.eru
