Add freeipa node

--- a/classes/system/reclass/storage/system/fpy_eru.yml
+++ b/classes/system/reclass/storage/system/fpy_eru.yml
@@ -205,3 +205,10 @@ parameters:
                     name: owncloud
                     host:
                       name: owncloud.lxc.eru
+        fpy_int_eru_freeipa:
+          name: freeipa
+          domain: lxc.eru
+          classes:
+            - system.linux.system.single
+          params:
+            salt_master_host: ${_param:reclass_config_master}
